--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="font-sans">
+<html lang="en" class="font-sans bg-background text-foreground">
 
 <head>
   <meta charset="UTF-8" />
