--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   <title>HrBot</title>
 </head>
 
-<body>
+<body class="overflow-scroll">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
